fix: increase margin of Say Hallo button to prevent overlap with privacy error message

--- a/src/app/main-content/contact/contact-form/contact-form.component.scss
+++ b/src/app/main-content/contact/contact-form/contact-form.component.scss
@@ -214,7 +214,7 @@ input[type="submit"] {
   border-radius: 24px;
   cursor: pointer;
   transition: all $transition-base;
-  margin: 24px 0;
+  margin: 74px 0;
   &:disabled {
     opacity: 0.5;
     cursor: not-allowed;
